--- a/src/main/resources/templates/banks/BankList.html
+++ b/src/main/resources/templates/banks/BankList.html
@@ -5,19 +5,32 @@
     <title>Список банков</title>
 </head>
 <body>
+<h2>Список Банков</h2>
 
-
+<form method="POST" th:action="@{/banks/add}">
+    <input type="hidden" name="bankId" th:value="*{bank.getId()}" />
+    <button type="submit" name="submit" value="value" class="link-button">Delete</button>
+</form>
 <table th:id="table1">
     <tr>
         <th>ID</th>
         <th></th>
         <th></th>
     </tr>
-    <tr th:each="bank:${bankService.getAll()}">
-        <!--        <td th:text="${#dates.format(call.getDate(),'HH:mm')}"></td>-->
+    <tr th:each="bank:${bankService?.getAll()}">
         <td th:text="${bank.getId()}"></td>
-        <td><a th:href="@{/banks/edit/{bankId}(bankId=*{bank.id})}" th:utext="edit">...</a></td>
-        <td><a th:href="@{/banks/delete/{bankId}(bankId=*{bank.id})}" th:utext="delete">...</a></td>
+        <td>
+            <form method="POST" th:action="@{/banks/edit}">
+                <input type="hidden" name="bankId" th:value="*{bank.getId()}" />
+                <button type="submit" name="submit" value="value" class="link-button">Edit</button>
+            </form>
+        </td>
+        <td>
+            <form method="POST" th:action="@{/banks/delete}">
+                <input type="hidden" name="bankId" th:value="*{bank.getId()}" />
+                <button type="submit" name="submit" value="value" class="link-button">Delete</button>
+            </form>
+        </td>
     </tr>
 </table>
 </body>
