--- a/src/main/resources/templates/clients/clientList.html
+++ b/src/main/resources/templates/clients/clientList.html
@@ -8,14 +8,20 @@
 <table th:id="table1">
     <tr>
         <th>ID</th>
-        <th></th>
-        <th></th>
+        <th>Fio</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Passport</th>
     </tr>
-    <tr th:each="bank:${bankService.getAll()}">
+    <tr th:each="client:${clientService.getAll()}">
         <!--        <td th:text="${#dates.format(call.getDate(),'HH:mm')}"></td>-->
-        <td th:text="${bank.getId()}"></td>
-        <td><a th:href="@{/banks/edit/{bankId}(bankId=*{bank.id})}" th:utext="edit">...</a></td>
-        <td><a th:href="@{/banks/delete/{bankId}(bankId=*{bank.id})}" th:utext="delete">...</a></td>
+        <td th:text="${client.getId()}"></td>
+        <td th:text="${client.getFio()}"></td>
+        <td th:text="${client.getPhone()}"></td>
+        <td th:text="${client.getEmail()}"></td>
+        <td th:text="${client.getPassportNumber()}"></td>
+        <td><a th:href="@{/clients/edit/{clientId}(clientId=*{client.id})}" th:utext="edit">...</a></td>
+        <td><a th:href="@{/clients/delete/{clientId}(clientId=*{client.id})}" th:utext="delete">...</a></td>
     </tr>
 </table>
 </body>
