--- a/src/main/resources/templates/clients/clientEdit.html
+++ b/src/main/resources/templates/clients/clientEdit.html
@@ -29,3 +29,67 @@
 </table>
 </body>
 </html>
+
+
+<form class="form-horizontal">
+    <fieldset>
+
+        <!-- Form Name -->
+        <legend>Form Name</legend>
+
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="textinput">ID</label>
+            <div class="col-md-2">
+                <input id="textinput" name="textinput" type="text" placeholder="" class="form-control input-md">
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="textinput">ФИО</label>
+            <div class="col-md-4">
+                <input id="textinput" name="textinput" type="text" placeholder="Иванов Иван" class="form-control input-md">
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="textinput">Phone</label>
+            <div class="col-md-4">
+                <input id="textinput" name="textinput" type="text" placeholder="+7 (905) 555-35-35" class="form-control input-md">
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="textinput">Email</label>
+            <div class="col-md-4">
+                <input id="textinput" name="textinput" type="text" placeholder="a@mail.org" class="form-control input-md">
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="textinput">Passport number</label>
+            <div class="col-md-4">
+                <input id="textinput" name="textinput" type="text" placeholder="1234 567890" class="form-control input-md">
+
+            </div>
+        </div>
+
+        <!-- Button (Double) -->
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="button1id">Double Button</label>
+            <div class="col-md-8">
+                <button id="button1id" name="button1id" class="btn btn-success">Good Button</button>
+                <button id="button2id" name="button2id" class="btn btn-danger">Scary Button</button>
+            </div>
+        </div>
+
+    </fieldset>
+</form>
