--- a/src/main/resources/templates/clients/clientList.html
+++ b/src/main/resources/templates/clients/clientList.html
@@ -1,28 +1,90 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Список банков</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="narrow-jumbotron.css" rel="stylesheet">
 </head>
+
 <body>
-<table th:id="table1">
-    <tr>
-        <th>ID</th>
-        <th>Fio</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Passport</th>
-    </tr>
-    <tr th:each="client:${clientService.getAll()}">
-        <!--        <td th:text="${#dates.format(call.getDate(),'HH:mm')}"></td>-->
-        <td th:text="${client.getId()}"></td>
-        <td th:text="${client.getFio()}"></td>
-        <td th:text="${client.getPhone()}"></td>
-        <td th:text="${client.getEmail()}"></td>
-        <td th:text="${client.getPassportNumber()}"></td>
-        <td><a th:href="@{/clients/edit/{clientId}(clientId=*{client.id})}" th:utext="edit">...</a></td>
-        <td><a th:href="@{/clients/delete/{clientId}(clientId=*{client.id})}" th:utext="delete">...</a></td>
-    </tr>
-</table>
+
+<div class="container">
+    <div class="header clearfix">
+        <nav>
+            <ul class="nav nav-pills float-right">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+
+                </li>
+            </ul>
+        </nav>
+        <h3 class="text-muted">Список client</h3>
+        <p>
+        </p>
+    </div>
+    <div class="header clearfix">
+        <form method="POST" th:action="@{/client/add}">
+            <button type="submit" class="btn btn-primary btn-lg"
+                    style="display: inline; position: static; float: left; line-height: 24px; text-align: justify;">Add
+                new client
+            </button>
+        </form>
+    </div>
+    <div class="header clearfix">
+
+        <table class="table" style="">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Fio</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Passport</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="client:${clientService.getAll()}">
+                <!--        <td th:text="${#dates.format(call.getDate(),'HH:mm')}"></td>-->
+                <td th:text="${client.getId()}"></td>
+                <td th:text="${client.getFio()}"></td>
+                <td th:text="${client.getPhone()}"></td>
+                <td th:text="${client.getEmail()}"></td>
+                <td th:text="${client.getPassportNumber()}"></td>
+                <td>
+                    <form method="POST" th:action="@{/client/edit}">
+                        <input type="hidden" name="bankId" th:value="*{client.getId()}"/>
+                        <button type="button" class="btn btn-info btn-sm" style="" th:action="@{/client/edit}"
+                                th:value="*{client.getId()}">Details
+                        </button>
+                    </form>
+                </td>
+                <td>
+                    <form method="POST" th:action="@{/client/delete}">
+                        <input type="hidden" name="bankId" th:value="*{client.getId()}"/>
+                        <button type="button" class="btn btn-danger btn-warning btn-sm" style=""
+                                th:action="@{/client/delete}" th:value="*{client.getId()}">Delete
+                        </button>
+                    </form>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="row marketing">
+    </div>
+    <footer class="footer">
+        <div class="container" style=""></div>
+        <p>© Company 2017</p>
+    </footer>
+</div> <!-- /container -->
+
 </body>
 </html>
